System Modules: added modules.

--- a/index.htm
+++ b/index.htm
@@ -713,6 +713,209 @@
 					{
 						title: 'System Modules',
 						modules: [
+							{
+								name: 'alternatives',
+								description: 'Manages alternative programs for common commands',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'at',
+								description: 'Schedule the execution of a command or script file via the at command',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'authorized_key',
+								description: 'Adds or removes an SSH authorized key',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'capabilities',
+								description: 'Manage Linux capabilities',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'cron',
+								description: 'Manage cron.d and crontab entries',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'debconf',
+								description: 'Configure a .deb package',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'facter',
+								description: 'Runs the discovery program facter on the remote system',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'filesystem',
+								description: 'Makes file system on block device',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'firewalld',
+								description: 'Manage arbitrary ports/services with firewalld',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'getent',
+								description: 'A wrapper to the unix getent utility',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'group',
+								description: 'Add or remove groups',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'hostname',
+								description: 'Manage hostname',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'kernel_blacklist',
+								description: 'Blacklist kernel modules',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'locale_gen',
+								description: 'Creates or removes locales',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'lvg',
+								description: 'Configure LVM volume groups',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'lvol',
+								description: 'Configure LVM logical volumes',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'modprobe',
+								description: 'Add or remove kernel modules',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'mount',
+								description: 'Control active and configured mount points',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'ohai',
+								description: 'Returns inventory data from Ohai',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'open_iscsi',
+								description: 'Manage iscsi targets with open-iscsi',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'ping',
+								description: 'Try to connect to host and return pong on success',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'seboolean',
+								description: 'Toggles SELinux booleans',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'selinux',
+								description: 'Change policy and state of SELinux',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'service',
+								description: 'Manage services',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'setup',
+								description: 'Gathers facts about remote hosts',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'sysctl',
+								description: 'Manage entries in sysctl.conf',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'ufw',
+								description: 'Manage firewall with UFW',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'user',
+								description: 'Manage user accounts',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'zfs',
+								description: 'Manage zfs',
+								type: 'extras',
+								options: {
+								}
+							}
 						]
 					},
 					{
